<resources>
    <string name="app_name">MovieMe</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="welcome_to_movie_me">Welcome to Movie Me</string>
    <string name="the_best_movies_streaming_app_of_the_century">The best movies streaming app of the century to make your days great !</string>
    <string name="you_can_watch_new">You can watch new and exclusive movies, series and TV shows</string>
    <string name="you_can_also_add_all_your_favorite">You can also add all your favorite movies, series and TV shows to your favorites list</string>
    <string name="get_start">Get start</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_language">Change language</string>
    <string name="arabic">Arabic</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create your Account</string>
    <string name="remember_me">Remember me</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="you_can_not_enter_empty_value">You can\'t enter an empty value</string>
    <string name="the_email_not_matching">The email not matching</string>
    <string name="password_must_be_less_than">"Password must be less than 20 and more than"</string>
    <string name="alert">Alert</string>
    <string name="cancel">cancel</string>
    <string name="ok">Ok</string>

</resources>