<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_Color"
    tools:context=".Ui.SignIn.SignInWithAnthorActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="?background_Color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/background_Color">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgv_others_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/vector_illustration_complete_celebration_shield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/let_s_you_in"
                app:layout_constraintTop_toBottomOf="@id/imgv_others_sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="?attr/text_color"
                android:fontFamily="@font/edunswactfoundation_variablefont_wght"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cd_google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:backgroundTint="?attr/background_Color_card_view"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_screen">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_icons8_google"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/_35sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:text="@string/continue_with_google"
                    android:textAllCaps="false"
                    android:textColor="?attr/text_color"
                    android:textSize="@dimen/_10ssp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cd_facebook_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:backgroundTint="?attr/background_Color_card_view"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cd_google_btn">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_icons8_facebook_circled"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/_35sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:text="@string/continue_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="?attr/text_color"
                    android:textSize="@dimen/_10ssp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_twitter_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:backgroundTint="?attr/background_Color_card_view"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cd_facebook_btn">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_icons8_twitter"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/_35sdp"
                    android:paddingEnd="@dimen/_25sdp"
                    android:text="@string/continue_with_twitter"
                    android:textAllCaps="false"
                    android:textColor="?attr/text_color"
                    android:textSize="@dimen/_10ssp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ly_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cd_twitter_btn">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/gray_ed_bg_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/edunswactfoundation_variablefont_wght"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="?attr/text_color"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/gray_ed_bg_color" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_with_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/shape_of_button_intro"
                android:fontFamily="@font/edunswactfoundation_variablefont_wght"
                android:text="@string/sign_in_with_password"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_or" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_with_password"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="?attr/text_color_questions"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/tv_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>