<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background_Color"
    tools:context=".Ui.SignUp.SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="?background_Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="?attr/background_Color">

            <TextView
                android:id="@+id/tv_title_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_70sdp"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/create_your_account"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20ssp"
                android:background="@drawable/ed_shape_sign"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableTint="@color/Gray"
                android:fontFamily="@font/edunswactfoundation_variablefont_wght"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textIsSelectable="false"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20ssp"
                android:background="@drawable/ed_shape_sign"
                android:drawableStart="@drawable/ic_icons8_lock_26"
                android:drawableEnd="@drawable/ic__eye_password_see_view_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableTint="@color/Gray"
                android:fontFamily="@font/edunswactfoundation_variablefont_wght"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_11sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textIsSelectable="false"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_email" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/ck_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:buttonTint="@color/Red"
                android:text="@string/remember_me"
                android:textColor="?attr/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/shape_of_button_intro"
                android:fontFamily="@font/edunswactfoundation_variablefont_wght"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ck_remember_me" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/pb_sign_up"
                style="@style/SpinKitView.Circle"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_36sdp"
                android:visibility="gone"
                app:SpinKit_Color="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ck_remember_me"

                />

            <LinearLayout
                android:id="@+id/ly_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/gray_ed_bg_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/edunswactfoundation_variablefont_wght"
                    android:gravity="center"
                    android:text="@string/or_continue_with"
                    android:textColor="?attr/text_color"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/gray_ed_bg_color" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_continue_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_or">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:outlineAmbientShadowColor="@color/gray_ed_bg_color"
                    android:outlineSpotShadowColor="@color/gray_ed_bg_color"

                    app:cardCornerRadius="@dimen/_11sdp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/img_btn_twitter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_icons8_twitter" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:outlineAmbientShadowColor="@color/gray_ed_bg_color"
                    android:outlineSpotShadowColor="@color/gray_ed_bg_color"
                    app:cardCornerRadius="@dimen/_11sdp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/img_btn_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_icons8_facebook_circled" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:outlineAmbientShadowColor="@color/gray_ed_bg_color"
                    android:outlineSpotShadowColor="@color/gray_ed_bg_color"
                    app:cardCornerRadius="@dimen/_11sdp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/img_btn_google"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/ic_icons8_google" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_12ssp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ly_continue_with">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/Gray"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cairo_bold"
                    android:gravity="start"
                    android:text="@string/sign_in"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>